<resources>
    <string name="app_name">Elektra</string>
    <string name="title_activity_prime">PrimeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Product</string>
    <string name="menu_gallery">Coupons</string>
    <string name="menu_slideshow">About Us</string>
    <string name="menu_tools">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Wallet</string>

    <string name="terms"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a purus metus. Fusce varius nisl fermentum turpis pretium hendrerit. Proin ac mauris id ante consequat rutrum a nec libero. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Items</string>
    <string name="second_fragment_label">Product details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



</resources>